Closed Bug 405178 Opened 17 years ago Closed 17 years ago

"ASSERTION: SetMayHaveFrame failed" and crash with -moz-column

Categories

(Core :: Layout: Block and Inline, defect, P4)

defect

Tracking

()

VERIFIED FIXED
mozilla1.9beta2

People

(Reporter: jruderman, Assigned: MatsPalmgren_bugz)

References

Details

(Keywords: assertion, crash, testcase)

Attachments

(5 files)

Loading the testcase triggers:

###!!! ASSERTION: SetMayHaveFrame failed?: 'mContent->MayHaveFrame()', file /Users/jruderman/trunk/mozilla/layout/generic/nsFrame.cpp, line 409

Reloading the testcase triggers a crash [@ GetTrimmableWhitespaceCount].
Component: GFX: Thebes → Layout: Block and Inline
Flags: in-testsuite?
Flags: blocking1.9?
OS: Mac OS X → All
QA Contact: thebes → layout.block-and-inline
Hardware: PC → All
Attached file Frame dumps
The problem is that nsCSSFrameConstructor::ContentRemoved() fails to remove
all frames associated with |aChild| (the bug is in nsBlockFrame really).
Assignee: nobody → mats.palmgren
Status: NEW → ASSIGNED
Attached patch Patch rev. 1Splinter Review
Propagate |aRemoveOnlyFluidContinuations| also to other blocks.

Perhaps we should even use PR_FALSE in RemoveBlockChild?
I don't see why anyone would want to leave non-fluid continuations
around in other blocks...
Attachment #290059 - Flags: superreview?(roc)
Attachment #290059 - Flags: review?(roc)
BTW, the reason for the assertion is that MayHaveFrame() returned false
because |parent| is null (after the content was removed) here:
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/content/base/src/nsGenericDOMDataNode.cpp&rev=3.244&root=/cvsroot&mark=797-798#794
Comment on attachment 290059 [details] [diff] [review]
Patch rev. 1

I think this is right.
Attachment #290059 - Flags: superreview?(roc)
Attachment #290059 - Flags: superreview+
Attachment #290059 - Flags: review?(roc)
Attachment #290059 - Flags: review+
Attachment #290059 - Flags: approval1.9?
Attachment #290059 - Flags: approval1.9? → approval1.9+
Flags: blocking1.9? → blocking1.9+
Priority: -- → P4
mozilla/layout/generic/nsBlockFrame.cpp 	3.894
mozilla/layout/generic/test/Makefile.in 	1.17
mozilla/layout/generic/test/test_bug405178.html 	1.1 

-> FIXED
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Flags: in-testsuite? → in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9 M10
verified fixed using debug build Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b2pre) Gecko/2007120520 Minefield/3.0b2pre 

no crash and no assertion on testcases - > Adding verified keyword
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: