Propagate |aRemoveOnlyFluidContinuations| when removing continuations in other blocks. b=405178 r+sr=roc a=mtschrep